Trying new way to generate path